plugins {
	id 'fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = "${project.mod_version}+mc${project.minecraft_version}"
group = project.maven_group

def modArchiveVersion = "${project.mod_version}+mc${project.minecraft_version}"

base {
	archivesName = project.archives_base_name
}

tasks.withType(org.gradle.api.tasks.bundling.AbstractArchiveTask).configureEach {
	archiveVersion.set(modArchiveVersion)
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	mavenCentral()
    maven { url "https://maven.terraformersmc.com/releases/" }
	  maven { url "https://maven.nucleoid.xyz/" }
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	
	// Mod Menu API for the config screen
	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"

	testImplementation platform("org.junit:junit-bom:5.12.2")
	testImplementation "org.junit.jupiter:junit-jupiter"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

loom {
	mixin {
		useLegacyMixinAp = true
		defaultRefmapName = "translate_allinone.refmap.json"
	}
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
}

def defaultTestApiFamily = project.minecraft_version == "1.20.4" ? "mc1204" : (project.minecraft_version.startsWith("26.") ? "mc26" : "mc12111")
def testApiFamily = providers.gradleProperty("test_api_family").getOrElse(defaultTestApiFamily)

sourceSets {
	test {
		java.setSrcDirs(["src/test/java", "src/test/${testApiFamily}/java"])
	}
}

test {
	useJUnitPlatform()
}

def clientJavaExecutable = providers.gradleProperty("client_java_executable").getOrNull()
if (clientJavaExecutable != null) {
	tasks.named("runClient", org.gradle.api.tasks.JavaExec).configure {
		executable = clientJavaExecutable
	}
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
